--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port = 8181
+
 #logging.level.org.springframework = debug
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
@@ -21,3 +23,11 @@ spring.jpa.properties.javax.persistence.validation.mode=none
 ## Config the Default Format Date
 spring.jackson.date-format=dd/MM/yyyy HH:mm:ss
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
+
+spring.application.admin.enabled=false
+
+
+#EXCEPTION HANDLER
+server.error.whitelabel.enabled=false
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
