--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,13 +21,16 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.javax.persistence.validation.mode=none
 
 ## Config the Default Format Date
-spring.jackson.date-format=dd/MM/yyyy HH:mm:ss
+spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 
 spring.application.admin.enabled=false
 
+##EXCEPTION HANDLER
+#server.error.whitelabel.enabled=false
+#spring.mvc.throw-exception-if-no-handler-found=true
+#spring.resources.add-mappings=false
 
-#EXCEPTION HANDLER
-server.error.whitelabel.enabled=false
-spring.mvc.throw-exception-if-no-handler-found=true
-spring.resources.add-mappings=false
+## upload file
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
